rds.tf
# creating database subnet group
resource "aws_db_subnet_group" "database_subnet_group" {
  name        = "${var.project_name}-${var.environment}-rds-subnets"
  subnet_ids  = [aws_subnet.private_data_subnet_az1.id, aws_subnet.private_data_subnet_az2.id]
  description = "subnets for rds"

  tags = {
    Name = "${var.project_name}-${var.environment}-rds-subnets"
  }
}

# launching a fresh rds instance
resource "aws_db_instance" "database_instance" {
  identifier             = var.database_instance_identifier
  instance_class         = var.database_instance_class
  engine                 = var.database_engine           
  engine_version         = var.database_engine_version    
  allocated_storage      = var.database_allocated_storage 
  db_name                = var.database_name
  username               = var.database_username
  password               = var.database_password
  db_subnet_group_name   = aws_db_subnet_group.database_subnet_group.name
  vpc_security_group_ids = [aws_security_group.rds_security_group.id]
  availability_zone      = data.aws_availability_zones.available_zones.names[1]
  multi_az               = var.multi_az_deployment
  skip_final_snapshot    = true

  tags = {
    Name = "${var.project_name}-${var.environment}-rds"
  }
}
