vpc.tf
# creating a vpc 
resource "aws_vpc" "vpc" {
    cidr_block = var.vpc_cidr
    instance_tenancy = "default"
    enable_dns_hostnames = true

    tags = {
        Name = "${var.project_name}-${var.environment}-vpc" 
    }
}

# creating a internet gateway and attach it to vpc
resource "aws_internet_gateway" "internet_gateway" {
    vpc_id = aws_vpc.vpc.id 

    tags = {
      Name = "${var.project_name}-${var.environment}-igw"
    }
}

# using data source to get all availability zones in region
data "aws_availability_zones" "available_zones" {}

# creating a public subnet az1  
resource "aws_subnet" "public_subnet_az1" {
    vpc_id = aws_vpc.vpc.id
    cidr_block = var.public_subnet_az1_cidr
    availability_zone = data.aws_availability_zones.available_zones.names[0]
    map_public_ip_on_launch = true

    tags = {
        Name = "${var.project_name}-${var.environment}-public-az1"
    }

}

#creating public subnet az2
resource "aws_subnet" "public_subnet_az2" {
    vpc_id = aws_vpc.vpc.id
    cidr_block = var.public_subnet_az2_cidr
    availability_zone = data.aws_availability_zones.available_zones.names[1]
    map_public_ip_on_launch = true

    tags = {
        Name = "${var.project_name}-${var.environment}-public-az2"
    }
}

#creating route table for public subnets and a public route 
resource "aws_route_table" "public_route_table" {
    vpc_id = aws_vpc.vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.internet_gateway.id 
    }

    tags = {
        Name = "${var.project_name}-${var.environment}-public-route-table"
    }
}

#associating public subnet az1 to "public route table"
resource "aws_route_table_association" "public_subnet_az1_association" {
    subnet_id = aws_subnet.public_subnet_az1.id
    route_table_id = aws_route_table.public_route_table.id
}

#associating public subnet az2 to "public route table"
resource "aws_route_table_association" "public_subnet_az2_association" {
    subnet_id = aws_subnet.public_subnet_az2.id
    route_table_id = aws_route_table.public_route_table.id 
}

#creating private subnet az1
resource "aws_subnet" "private_app_subnet_az1" {
    vpc_id = aws_vpc.vpc.id
    cidr_block = var.private_app_subnet_az1_cidr
    availability_zone = data.aws_availability_zones.available_zones.names[0]
    map_public_ip_on_launch = false

    tags = {
        Name = "${var.project_name}-${var.environment}-private-az1"
    }

}

#creating private app subnet az2
resource "aws_subnet" "private_app_subnet_az2" {
    vpc_id = aws_vpc.vpc.id
    cidr_block = var.private_app_subnet_az2_cidr
    availability_zone = data.aws_availability_zones.available_zones.names[1]
    map_public_ip_on_launch = false

    tags = {
        Name = "${var.project_name}-${var.environment}-private-az2"
    }
}

#creating private data subnet az1
resource "aws_subnet" "private_data_subnet_az1" {
    vpc_id = aws_vpc.vpc.id
    cidr_block = var.private_data_subnet_az1_cidr
    availability_zone = data.aws_availability_zones.available_zones.names[0]
    map_public_ip_on_launch = false

    tags = {
        Name = "${var.project_name}-${var.environment}-private-data-az1"
    }
}

#creating private data subnet az2
resource "aws_subnet" "private_data_subnet_az2" {
    vpc_id = aws_vpc.vpc.id
    cidr_block = var.private_data_subnet_az2_cidr
    availability_zone = data.aws_availability_zones.available_zones.names[1]
    map_public_ip_on_launch = false

    tags = {
        Name = "${var.project_name}-${var.environment}-private-data-az2"
    }
}
